@@ -9,9 +9,10 @@ tasks.whenTaskAdded { task ->
 apply plugin: 'java'
 apply plugin: 'application'
 
-// JDK 8
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 mainClassName = 'edu.mcw.rgd.pipelines.agr.Main'
 String myAppName = 'alliance-submission-pipeline'
 
@@ -22,13 +23,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
+    implementation 'org.apache.commons:commons-dbcp2:2.10.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.10.0.0'
-    implementation 'org.springframework:spring-beans:5.3.29'
-    implementation 'org.springframework:spring-jdbc:5.3.29'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.11.0.0'
+    implementation 'org.springframework:spring-beans:5.3.30'
+    implementation 'org.springframework:spring-jdbc:5.3.30'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
